Fix overflow

--- a/Content/style.css
+++ b/Content/style.css
@@ -9,7 +9,6 @@ body
 {
     border: 0px;
     margin: 0px;
-    overflow: hidden;
     padding: 0px;
 }
 .card-grid {
